objects/modigie__Message_Center__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>modigie__AdhoqLimitReached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhoq Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__AllException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__CalloutException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callout Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__CalloutResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callout Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__CreditError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__DMLException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DML Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__EmailException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__InvocableLimitExceeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invocable Limit Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__LimitException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__NoDataFoundException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NoDataFound Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__SecurityException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__UnexpectedException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unexpected Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_AdhoqLimitReached__c</fullName>
        <label>Users Opted For Adhoq Limit Reached</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_AllException__c</fullName>
        <label>Users Opted For All Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_CalloutException__c</fullName>
        <label>Users Opted For Callout Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_CalloutResponse__c</fullName>
        <label>Users Opted For Callout Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_CreditError__c</fullName>
        <label>Users Opted For Credit Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_DMLException__c</fullName>
        <label>Users Opted For DML Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_EmailException__c</fullName>
        <label>Users Opted For Email Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_InvocableLimitExceeded__c</fullName>
        <label>Users Opted For Invocable Limit Exceeded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_LimitException__c</fullName>
        <label>Users Opted For Limit Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_NoDataFoundException__c</fullName>
        <label>Users Opted For NoDataFound Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_SecurityException__c</fullName>
        <label>Users Opted For Security Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Users_Opted_For_UnexpectedException__c</fullName>
        <label>Users Opted For Unexpected Exception</label>
        <type>TextArea</type>
    </fields>
    <label>Modigie Message Center</label>
</CustomObject>